# readysetgo

./: .gitignore  BUILD.bazel  Brewfile  Brewfile.lock.json  LICENSE  README.md  Tiltfile  WORKSPACE  buf.gen.yaml  default.nix  go.mod  go.sum  tidy.sh
.github/actions/bazel-affected/: action.yml
.github/actions/bazel-cache/: action.yml
.github/actions/bazel-command/: action.yml
.github/actions/kube-start/: action.yml
.github/actions/nix-os/: action.yml
.github/linters/: .golangci.yml
.github/workflows/: bazel.yml  buf.yml  build.yml  buildifier.yml  check-merge.yml  check-pr.yml  lint.yml  linters.yml  test.yml  tilt.yml
deployments/: BUILD  BUILD.bazel  example-go-grpc.yaml  example-go-web.yaml
proto/: buf.yaml
proto/example/: BUILD.bazel  example.pb.go  example.proto
proto/example/service/: BUILD.bazel  example.proto
proto/example/service/v1/: BUILD.bazel  example_service.pb.go  example_service.proto
src/example/service/: BUILD.bazel  get_example.go  main.go  service.go  service_test.go  set_example.go
src/example/web/: BUILD.bazel
src/example/web/server/: BUILD.bazel  main.go
src/example/web/static/: index.html
src/server/: BUILD.bazel  go_service.bzl  main.tmpl
src/server/testing/: BUILD.bazel  test_server.go
tools/bazel/archives/: external_go_deps.bzl  rules.bzl
tools/tilt/go_bazel/: Tiltfile
