load("@bazel_gazelle//:def.bzl", "gazelle")

package(default_visibility = ["//visibility:public"])

# gazelle:prefix github.com/stabai/readysetgo
# gazelle:go_naming_convention import
# gazelle:proto disable
gazelle(name = "gazelle")

gazelle(
    name = "gazelle-update-repos",
    args = [
        "-from_file=go.mod",
        "-to_macro=tools/bazel/archives/external_go_deps.bzl%external_go_deps",
        "-prune",
    ],
    command = "update-repos",
)

sh_binary(
    name = "tidy",
    srcs = ["tidy.sh"],
)
