load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "service_lib",
    srcs = ["main.go"],
    importpath = "github.com/stabai/readysetgo/src/example/service",
    visibility = ["//visibility:private"],
    deps = [
        "//proto/example/service/v1:example_service_go_proto",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//reflection",
    ],
)

go_binary(
    name = "service",
    embed = [":service_lib"],
    visibility = ["//visibility:public"],
)
