load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@io_bazel_rules_docker//go:image.bzl", "go_image")

go_library(
    name = "service_lib",
    srcs = [
        "get_example.go",
        "main.go",
        "service.go",
        "set_example.go",
    ],
    importpath = "github.com/stabai/readysetgo/src/example/service",
    visibility = ["//visibility:private"],
    deps = [
        "//proto/example:example_go_proto",
        "//proto/example/service/v1:example_service_go_proto",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//reflection",
        "@org_golang_google_protobuf//types/known/emptypb",
    ],
)

go_binary(
    name = "service",
    embed = [":service_lib"],
    visibility = ["//visibility:public"],
)

go_image(
    name = "example-go-grpc-image",
    embed = [":service_lib"],
    importpath = "github.com/stabai/readysetgo/src/example/service",
    visibility = ["//visibility:public"],
)
