load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "testing",
    srcs = ["test_server.go"],
    importpath = "github.com/stabai/readysetgo/src/server/testing",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_stretchr_testify//assert",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//credentials/insecure",
        "@org_golang_google_grpc//health",
        "@org_golang_google_grpc//health/grpc_health_v1",
        "@org_golang_google_grpc//reflection",
    ],
)
