load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

package(default_visibility = ["//visibility:public"])

proto_library(
    name = "example_service_proto",
    srcs = ["example_service.proto"],
    deps = [
        "//proto/example:example_proto",
        "@com_google_protobuf//:empty_proto",
    ],
)

go_proto_library(
    name = "example_service_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/stabai/readysetgo/proto/example/service/v1",
    proto = ":example_service_proto",
    deps = [
        "//proto/example:example_go_proto",
    ],
)
