load("@io_bazel_rules_go//go:def.bzl", "go_library")

package(default_visibility = ["//visibility:public"])

go_library(
    name = "example_service_go_proto",
    srcs = glob(["*.pb.go"]),
    importpath = "github.com/stabai/readysetgo/proto/example/service/v1",
    deps = [
        "//proto/example:example_go_proto",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
        "@org_golang_google_protobuf//reflect/protoreflect",
        "@org_golang_google_protobuf//runtime/protoimpl",
        "@org_golang_google_protobuf//types/known/emptypb",
    ],
)
